# triage-repair

./: .gitignore  LICENSE  README.md  pyproject.toml  rationale.md  requirements.txt  task.md
checks/: hidden.py  visible.py
src/triage/: __init__.py  __main__.py  model.py  pipeline.py  routing.py  scoring.py  triage.py
tests/: hidden.py  visible.py
verifier/: verify.py
verifier/cheats/: alias.patch  calibration.patch  cheat_battery.sh  hardcoded_cases.patch  memorisation.patch  summary.patch  threshold.patch
verifier/cheats/output/: generate_patches.sh
verifier/output/: generation_log.txt
verifier/outputs/: cheat_generation.txt  hidden.txt  verification.txt
verifier/solution/: gold_fix.patch  repair.patch  verification.txt
verifier/tests/: hidden.py  visible.py
