[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage"
version = "0.1.0"
description = "A small multi-step patient triage pipeline repair environment targeting agent code repair after refactoring, with inside-OOD and outside-OOD hidden checks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

